error.txt
speed.cpp: In constructor ‘SpeedGauge::SpeedGauge(GtkWidget*)’:
speed.cpp:14:29: error: ‘G_SOURCE_FUNC’ was not declared in this scope
         g_timeout_add(1000, G_SOURCE_FUNC(on_timeout), this);
                             ^~~~~~~~~~~~~
speed.cpp:14:29: note: suggested alternative: ‘GDK_SOURCE_PEN’
         g_timeout_add(1000, G_SOURCE_FUNC(on_timeout), this);
                             ^~~~~~~~~~~~~
                             GDK_SOURCE_PEN



